--- a/Barcode.html
+++ b/Barcode.html
@@ -16,7 +16,7 @@
         </a-marker>
 
 <a-marker type='barcode' value=’22’>
-            <a-box position='0 1 0' color="yellow"></a-box>
+            <a-sphere position='0 1 0' color="green"></a-sphere>
         </a-marker>
     
         <!-- use this <a-entity camera> to support multiple-markers, otherwise use <a-marker-camera> instead of </a-marker> -->
